--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Download GTA games" />
     <meta name="keywords" content="HTML, CSS, JS" />
+    <meta name="google-site-verification" content="gBCUXK2BwsP8Gw5BwAymptlRDM3aQaRoYEWNFenJniY">
     <meta name="keywords" content="GTA 5 download" />
     <meta name="keywords" content="GTA GAMES" />
     <meta name="author" content="Emmanuel Emejulu" />
