--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Download GTA games" />
     <meta name="keywords" content="HTML, CSS, JS" />
-    <meta name="google-site-verification" content="gBCUXK2BwsP8Gw5BwAymptlRDM3aQaRoYEWNFenJniY">
     <meta name="keywords" content="GTA 5 download" />
     <meta name="keywords" content="GTA GAMES" />
     <meta name="author" content="Emmanuel Emejulu" />
+    <meta name="google-site-verification" content="gBCUXK2BwsP8Gw5BwAymptlRDM3aQaRoYEWNFenJniY"/>
+    <meta name="propeller" content="15ba71d180e0eea2bef3cb1c5968f3d6">
     <meta name="robots" content="index, follow" />
-    <meta name="theme-color" content="rgb(243, 156, 26)">
+    <meta name="theme-color" content="rgb(243, 156, 26)"/>
     <link rel="canonical" href="https://www.gtaofficial.ml/">
     <link rel="apple-touch-icon" href="IMG/IMG_20210306_175328_063 - Copy.png">
     <link rel="icon" href="IMG/IMG_20210306_175328_063.JPG" />
