--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             Download for PC <i class="fas fa-laptop"></i>
         </button>
         <br />
-<a href="https://www.profitabletrustednetwork.com/z48kn22qsp?key=4f43d65c3b7a3e3bd683544c25ed2c60" id="download">Watch how to play GTA 5 on Android!!! </a>
+<a href="https://www.profitabletrustednetwork.com/z48kn22qsp?key=4f43d65c3b7a3e3bd683544c25ed2c60" style="font-size: small;">Watch how to play GTA 5 on Android!!! </a>
         <footer></footer>
         <script>
                 if ('serviceWorker' in navigator) {
