--- a/Download/Android/index.html
+++ b/Download/Android/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="../../CSS/app.css" />
     <link rel="stylesheet" href="../../fontawesome/css/all.css" />
     <script type="text/javascript" src="../../fontawesome/js/all.js"></script>
+    <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',4042405,document.body||document.documentElement)</script>
     <script type="text/javascript" src="JS/app.js"></script>
     <title>GTA OFFICIAL | DOWNLOAD GTA GAMES FOR ANDROID</title>
 </head>
@@ -63,7 +64,9 @@
                     style="width: 90%; height: 350px; border-radius: 10px;" alt="">
             </ul>
         </p>
+    <a href="https://whugesto.net/afu.php?zoneid=3970455" style="font-size: small;">How to add mods on GTA San Andreas</a>
         <br />
+
         <footer></footer>
 
 </body>
