--- a/Download/Android/Apk+Obb/GTAV/index.html
+++ b/Download/Android/Apk+Obb/GTAV/index.html
@@ -55,7 +55,7 @@
             Download GTA V Super Compressed for PPSSPP (ISO file) 382MB <i class="fab fa-android"></i>
         </button>
         <br />
-<a href="https://www.profitabletrustednetwork.com/z48kn22qsp?key=4f43d65c3b7a3e3bd683544c25ed2c60" id="download">Watch how to install!! </a>
+<a href="https://www.profitabletrustednetwork.com/z48kn22qsp?key=4f43d65c3b7a3e3bd683544c25ed2c60" style="font-size: smal;">Watch how to install and play GTA 5 at ease!!! </a>
         <footer></footer>
 
 </body>
