--- a/Download/Android/index.html
+++ b/Download/Android/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="../../CSS/app.css" />
     <link rel="stylesheet" href="../../fontawesome/css/all.css" />
     <script type="text/javascript" src="../../fontawesome/js/all.js"></script>
+<script type='text/javascript' src='//pl16157849.profitabletrustednetwork.com/70/0d/e2/700de2c9a5be5e1cbcfe5873586bf813.js'></script>
     <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',4042405,document.body||document.documentElement)</script>
     <script type="text/javascript" src="JS/app.js"></script>
     <title>GTA OFFICIAL | DOWNLOAD GTA GAMES FOR ANDROID</title>
