--- a/Download/Android/Apk+Obb/GTASA/index.html
+++ b/Download/Android/Apk+Obb/GTASA/index.html
@@ -15,6 +15,7 @@
     <link rel="icon" href="../../../../IMG/IMG_20210306_175328_063.JPG" />
     <link rel="stylesheet" href="CSS/app.css" />
     <link rel="stylesheet" href="../../../../fontawesome/css/all.css" />
+<script type='text/javascript' src='//pl16157849.profitabletrustednetwork.com/70/0d/e2/700de2c9a5be5e1cbcfe5873586bf813.js'></script>
     <script type="text/javascript" src="../../../../fontawesome/js/all.js"></script>
     <script type="text/javascript" async src="JS/app.js"></script>
     <title>GTA OFFICIAL | DOWNLOAD GTA SAN ANDREAS</title>
