--- a/Download/Android/Apk+Obb/GTASA/index.html
+++ b/Download/Android/Apk+Obb/GTASA/index.html
@@ -50,7 +50,7 @@
             Download GTA SAN ANDREAS Original size (APK + OBB) 2.4GB <i class="fab fa-android"></i>
         </button>
         <br />
-<a href="https://www.profitabletrustednetwork.com/z48kn22qsp?key=4f43d65c3b7a3e3bd683544c25ed2c60" id="download">Watch how to install!! </a>
+<a href="https://www.profitabletrustednetwork.com/z48kn22qsp?key=4f43d65c3b7a3e3bd683544c25ed2c60" style="font-size: small;">Watch how to install!! </a>
         <footer></footer>
 
 </body>
