--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="GTA GAMES" />
     <meta name="author" content="Emmanuel Emejulu" />
     <meta name="google-site-verification" content="gBCUXK2BwsP8Gw5BwAymptlRDM3aQaRoYEWNFenJniY"/>
+    <meta name="exoclick-site-verification" content="456a240bc466e4ac78c7946e844a29e5">
     <meta name="propeller" content="15ba71d180e0eea2bef3cb1c5968f3d6">
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="rgb(243, 156, 26)"/>
