--- a/Download/Android/Apk+Obb/GTASA/index.html
+++ b/Download/Android/Apk+Obb/GTASA/index.html
@@ -52,7 +52,7 @@
         <br />
 <a href="https://www.profitabletrustednetwork.com/z48kn22qsp?key=4f43d65c3b7a3e3bd683544c25ed2c60" style="font-size: small;">Watch how to install!! </a>
         <footer></footer>
-
+<script type="application/javascript" src="https://syndication.realsrv.com/splash.php?idzone=4215868"></script>
 </body>
 
 </html>
