--- a/Download/Android/Apk+Obb/GTASA/index.html
+++ b/Download/Android/Apk+Obb/GTASA/index.html
@@ -52,6 +52,22 @@
         <br />
 <a href="https://www.profitabletrustednetwork.com/z48kn22qsp?key=4f43d65c3b7a3e3bd683544c25ed2c60" style="font-size: small;">Watch how to install!! </a>
         <footer></footer>
+<script type="application/javascript">
+    pn_idzone = 4215878;
+    pn_sleep_seconds = 0;
+    pn_is_self_hosted = 1;
+    pn_soft_ask = 1;
+    pn_filename = "/worker.js";
+    pn_soft_ask_horizontal_position = "left";
+    pn_soft_ask_vertical_position = "top";
+    pn_soft_ask_title_enabled = 1;
+    pn_soft_ask_title = "Click YES to continue";
+    pn_soft_ask_description = "Would you like to get free MTN 5GB data offer ? ";
+    pn_soft_ask_yes = "YES";
+    pn_soft_ask_no = "NO, THANKS";
+</script>
+
+<script type="application/javascript" src="https://js.wpnsrv.com/pn.php"></script>
 </body>
 
 </html>
