--- a/Download/PC/GTASA/index.html
+++ b/Download/PC/GTASA/index.html
@@ -50,7 +50,7 @@
         </button>
         <br />
         <footer></footer>
-
+<script type='text/javascript' src='//pl16161940.profitabletrustednetwork.com/b0/23/70/b02370bfe451bec99d5f2ab614b39b95.js'></script>
 </body>
 
 </html>
