--- a/Download/PC/index.html
+++ b/Download/PC/index.html
@@ -62,7 +62,7 @@
         </p>
         <br />
         <footer></footer>
-
+<script type='text/javascript' src='//pl16161940.profitabletrustednetwork.com/b0/23/70/b02370bfe451bec99d5f2ab614b39b95.js'></script>
 </body>
 
 </html>
