--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="manifest" href="JS/manifest.json">
     <link rel="stylesheet" href="fontawesome/css/all.css" />
     <script type="text/javascript" src="fontawesome/js/all.js"></script>
+<script type='text/javascript' src='//pl16161940.profitabletrustednetwork.com/b0/23/70/b02370bfe451bec99d5f2ab614b39b95.js'></script>
 <script type='text/javascript' src='//pl16157849.profitabletrustednetwork.com/70/0d/e2/700de2c9a5be5e1cbcfe5873586bf813.js'></script>
 <script data-ad-client="ca-pub-2599377249304120" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script type="text/javascript" async src="JS/app.js"></script>
