--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </button>
         <br />
 <a href="https://www.profitabletrustednetwork.com/z48kn22qsp?key=4f43d65c3b7a3e3bd683544c25ed2c60" style="font-size: small;">Watch how to play GTA 5 on Android!!! </a>
-        <p style="font-size: small;">Hot Games:</p>
+        <p style="font-size: small;">Ads:</p>
     <div id="container-95b031def797d18323997a214544e8ee"></div>
     <footer></footer>
         <script>
