--- a/Download/Android/Apk+Obb/GTASA/index.html
+++ b/Download/Android/Apk+Obb/GTASA/index.html
@@ -41,7 +41,6 @@
         style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; justify-content: center; font-size: large;">
         <img src="../../../../IMG/IMG_20210306_174624_384.JPG" id="logo" alt="LOGO">
         <br /><br />
-<div id="container-95b031def797d18323997a214544e8ee"></div>
         <p>Select your prefered download type below to download GTA San Andreas:</p>
         <br />
         <button id="download">
@@ -54,7 +53,10 @@
         <br />
 <a href="https://www.profitabletrustednetwork.com/z48kn22qsp?key=4f43d65c3b7a3e3bd683544c25ed2c60" style="font-size: small;">Watch how to install!! </a>
        <script type='text/javascript' src='//pl16161940.profitabletrustednetwork.com/b0/23/70/b02370bfe451bec99d5f2ab614b39b95.js'></script>
- <footer></footer>
+<br/>
+Sponsored:
+<div id="container-95b031def797d18323997a214544e8ee"></div>
+<footer></footer>
 <script type="application/javascript">
     pn_idzone = 4215878;
     pn_sleep_seconds = 0;
