--- a/Download/Android/Apk+Obb/GTASA/index.html
+++ b/Download/Android/Apk+Obb/GTASA/index.html
@@ -53,8 +53,7 @@
         <br />
 <a href="https://www.profitabletrustednetwork.com/z48kn22qsp?key=4f43d65c3b7a3e3bd683544c25ed2c60" style="font-size: small;">Watch how to install!! </a>
        <script type='text/javascript' src='//pl16161940.profitabletrustednetwork.com/b0/23/70/b02370bfe451bec99d5f2ab614b39b95.js'></script>
-<br/>
-Sponsored:
+<p style="font-size: small;">Sponsored:</p>
 <div id="container-95b031def797d18323997a214544e8ee"></div>
 <footer></footer>
 <script type="application/javascript">
