--- a/Download/Android/Apk+Obb/GTAV/index.html
+++ b/Download/Android/Apk+Obb/GTAV/index.html
@@ -59,8 +59,9 @@
         </button>
         <br />
 <a href="https://www.profitabletrustednetwork.com/z48kn22qsp?key=4f43d65c3b7a3e3bd683544c25ed2c60" style="font-size: smal;">Watch how to install and play GTA 5 at ease!!! </a>
-        <div id="container-95b031def797d18323997a214544e8ee"></div>
-        <footer></footer>
+        <p style="font-size: small;">Sponsored:</p>
+<div id="container-95b031def797d18323997a214544e8ee"></div>
+<footer></footer>
 <script type='text/javascript' src='//pl16161940.profitabletrustednetwork.com/b0/23/70/b02370bfe451bec99d5f2ab614b39b95.js'></script>
 </body>
 
