--- a/Download/Android/Apk+Obb/GTAV/index.html
+++ b/Download/Android/Apk+Obb/GTAV/index.html
@@ -50,13 +50,11 @@
         <button id="download">
             Download GTA V (APK) <i class="fab fa-android"></i>
         </button>
-        <br />
+        <br/>
         <button id="download">
-            Download GTA V (APK + Built-in installer) 32MB <i class="fab fa-android"></i>
+        Download GTA V Prologue <i class="fab fa-android"></i>
         </button>
-        <button id="download">
-            Download GTA V Online 47MB <i class="fab fa-android"></i>
-        </button>
+        <br/>
         <button id="download">
             Download GTA V Super Compressed for PPSSPP (ISO file) 382MB <i class="fab fa-android"></i>
         </button>
